Enhance README with features and setup instructions
Expanded README with detailed features, tech stack, installation instructions, and usage guidelines.